<!--
  ~ Copyright (C) 2023 denkbares GmbH, Germany
  ~
  ~ This is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU Lesser General Public License as published by the Free
  ~ Software Foundation; either version 3 of the License, or (at your option) any
  ~ later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  ~ details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with this software; if not, write to the Free Software Foundation,
  ~ Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA, or see the FSF
  ~ site: http://www.fsf.org.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.uniwue.d3web</groupId>
	<artifactId>d3web</artifactId>
	<version>2024.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<description>Open source d3web parent</description>
	<url>https://www.d3web.de/</url>

	<properties>
		<d3web.version>${project.version}</d3web.version>
		<denkbares.version>${project.version}</denkbares.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/denkbares/d3web-Runtime/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>GNU Lesser General Public License, version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
		</license>
	</licenses>

	<modules>
		<module>d3web-Essentials</module>
		<module>d3web-Apps</module>
		<module>d3web-Plugins</module>
	</modules>

	<profiles>
		<profile>
			<id>dependency-check</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>6.2.2</version>
						<executions>
							<execution>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<defaultGoal>package</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<id>sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12</version>
					<configuration>
						<testFailureIgnore>true</testFailureIgnore>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>de.uniwue.maven.plugins</groupId>
					<artifactId>knowwe-versionator</artifactId>
					<version>1.9</version>
					<executions>
						<execution>
							<id>versionate-plugin</id>
							<phase>none</phase>
							<goals>
								<goal>versionate-plugin</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
					<executions>
						<execution>
							<id>copy-dependencies</id>
							<phase>test-compile</phase>
							<goals>
								<goal>build-classpath</goal>
							</goals>
							<configuration>
								<overWriteReleases>false</overWriteReleases>
								<overWriteSnapshots>false</overWriteSnapshots>
								<overWriteIfNewer>true</overWriteIfNewer>
								<pathSeparator>;</pathSeparator>
								<outputFile>target/dependencies/output.txt</outputFile>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>19.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>1.4.14</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.4.14</version>
			</dependency>
			<dependency>
				<groupId>net.sf.jung</groupId>
				<artifactId>jung-visualization</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itextpdf</artifactId>
				<version>5.5.13</version>
			</dependency>
			<dependency>
				<groupId>net.sf.jung</groupId>
				<artifactId>jung-graph-impl</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>xmlunit</groupId>
				<artifactId>xmlunit</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>2.12.2</version>
			</dependency>

			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-PluginManager</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-Utils</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>com.denkbares</groupId>
				<artifactId>denkbares-Progress</artifactId>
				<version>${denkbares.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Kernel</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Persistence</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-BasicProperties</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-Interview</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-Kernel-ExtensionPoints</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-Persistence-Basic</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-Persistence-ExtensionPoints</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-SessionPersistence-Basic</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-SessionPersistence-ExtensionPoints</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-TestCase</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-SessionPersistence</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-CostBenefit</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-DiaFlux</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-TestingFramework</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-XCL</artifactId>
				<version>${d3web.version}</version>
			</dependency>
			<dependency>
				<groupId>de.uniwue.d3web</groupId>
				<artifactId>d3web-Plugin-Tests</artifactId>
				<version>${d3web.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<id>des-repo-public</id>
			<name>Denkbares Public Repository</name>
			<url>https://repo.denkbares.com/repo-public/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>des-plugins-public</id>
			<url>https://repo.denkbares.com/plugins-public/</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<snapshotRepository>
			<id>des-snapshots-public</id>
			<name>denkbares Public Snapshots Repository</name>
			<url>https://repo.denkbares.com/snapshots-public/</url>
		</snapshotRepository>
		<repository>
			<id>des-releases-public</id>
			<name>denkbares Public Releases Repository</name>
			<url>https://repo.denkbares.com/releases-public/</url>
		</repository>
	</distributionManagement>

	<organization>
		<name>Universität Würzburg</name>
		<url>http://uni-wuerzburg.de/</url>
	</organization>
</project>
